packages/csharp/src/Kreuzberg/runtimes/osx-arm64/native/include/kreuzberg.h


typedef struct KREUZBERGKreuzbergPostProcessorVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*process)(const void *user_data,
                     const char *result,
                     const char *config,
                     char **out_error);
  int32_t (*processing_stage)(const void *user_data,
                              char **out_result,
                              char **out_error);
  int32_t (*should_process)(const void *user_data,
                            const char *_result,
                            const char *_config);
  uint64_t (*estimated_duration_ms)(const void *user_data,
                                    const char *_result);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergPostProcessorVTable;
typedef struct KREUZBERGKreuzbergValidatorVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*validate)(const void *user_data,
                      const char *result,
                      const char *config,
                      char **out_error);
  int32_t (*should_validate)(const void *user_data,
                             const char *_result,
                             const char *_config);
  int32_t (*priority)(const void *user_data);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergValidatorVTable;
typedef struct KREUZBERGKreuzbergEmbeddingBackendVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  uintptr_t (*dimensions)(const void *user_data);
  int32_t (*embed)(const void *user_data,
                   const char *texts,
                   char **out_result,
                   char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergEmbeddingBackendVTable;
typedef struct KREUZBERGKreuzbergDocumentExtractorVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*extract_bytes)(const void *user_data,
                           const uint8_t *content,
                           uintptr_t content_len,
                           const char *mime_type,
                           const char *config,
                           char **out_result,
                           char **out_error);
  int32_t (*extract_file)(const void *user_data,
                          const char *path,
                          const char *mime_type,
                          const char *config,
                          char **out_result,
                          char **out_error);
  int32_t (*supported_mime_types)(const void *user_data,
                                  char **out_result,
                                  char **out_error);
  int32_t (*priority)(const void *user_data);
  int32_t (*can_handle)(const void *user_data,
                        const char *_path,
                        const char *_mime_type);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergDocumentExtractorVTable;
typedef struct KREUZBERGKreuzbergRendererVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*render)(const void *user_data,
                    const char *doc,
                    char **out_result,
                    char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergRendererVTable;
typedef struct KREUZBERGKreuzbergRerankerBackendVTable {
  int32_t (*name_fn)(const void *user_data,
                     char **out_name,
                     char **out_error);
  int32_t (*version_fn)(const void *user_data,
                        char **out_version,
                        char **out_error);
  int32_t (*initialize_fn)(const void *user_data,
                           char **out_error);
  int32_t (*shutdown_fn)(const void *user_data,
                         char **out_error);
  int32_t (*rerank)(const void *user_data,
                    const char *query,
                    const char *documents,
                    char **out_result,
                    char **out_error);
  void (*free_string)(char*);
  void (*free_user_data)(void*);
} KREUZBERGKreuzbergRerankerBackendVTable;
int32_t kreuzberg_clear_ocr_backend(char **out_error);
int32_t kreuzberg_register_post_processor(const char *name,
                                          const struct KREUZBERGKreuzbergPostProcessorVTable *vtable,
                                          const void *user_data,
                                          char **out_error);
int32_t kreuzberg_unregister_post_processor(const char *name,
                                            char **out_error);
int32_t kreuzberg_clear_post_processor(char **out_error);
int32_t kreuzberg_register_validator(const char *name,
                                     const struct KREUZBERGKreuzbergValidatorVTable *vtable,
                                     const void *user_data,
                                     char **out_error);
int32_t kreuzberg_unregister_validator(const char *name,
                                       char **out_error);
int32_t kreuzberg_clear_validator(char **out_error);
int32_t kreuzberg_register_embedding_backend(const char *name,
                                             const struct KREUZBERGKreuzbergEmbeddingBackendVTable *vtable,
                                             const void *user_data,
                                             char **out_error);
int32_t kreuzberg_unregister_embedding_backend(const char *name,
                                               char **out_error);
int32_t kreuzberg_clear_embedding_backend(char **out_error);
int32_t kreuzberg_register_document_extractor(const char *name,
                                              const struct KREUZBERGKreuzbergDocumentExtractorVTable *vtable,
                                              const void *user_data,
                                              char **out_error);
int32_t kreuzberg_unregister_document_extractor(const char *name,
                                                char **out_error);
int32_t kreuzberg_clear_document_extractor(char **out_error);
int32_t kreuzberg_register_renderer(const char *name,
                                    const struct KREUZBERGKreuzbergRendererVTable *vtable,
                                    const void *user_data,
                                    char **out_error);
int32_t kreuzberg_unregister_renderer(const char *name,
                                      char **out_error);
int32_t kreuzberg_clear_renderer(char **out_error);
int32_t kreuzberg_register_reranker_backend(const char *name,
                                            const struct KREUZBERGKreuzbergRerankerBackendVTable *vtable,
                                            const void *user_data,
                                            char **out_error);
int32_t kreuzberg_unregister_reranker_backend(const char *name,
                                              char **out_error);
int32_t kreuzberg_clear_reranker_backend(char **out_error);